[metadata]
name = geodesic-chenhan
author = Andrew Van
author_email = vanandrew@wustl.edu
url= https://gitlab.com/vanandrew/chenhan
version = 0.1.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
install_requires =
    autowrap>=0.22
