[metadata]
name = geodesic-chenhan
author = Andrew Van
author_email = vanandrew@wustl.edu
url= https://github.com/vanandrew/geodesic-chenhan
version = 0.1.1
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    autowrap>=0.22

