[metadata]
name = geodesic-chenhan
author = Andrew Van
author_email = vanandrew@wustl.edu
url= https://github.com/vanandrew/geodesic-chenhan
version = 0.1.1
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    autowrap>=0.22

[options.extras_require]
dev =
    black >= 20.8b0
    pytest >= 6.2.5
    coverage >= 5.5
    pytest-pycodestyle >= 2.2.0
all =
    %(dev)s

[options.packages.find]
exclude = tests

[tool:pytest]
addopts = -v --pycodestyle
testpaths =
    tests

[pycodestyle]
ignore = E203, W503
max-line-length = 120

[pylint."MESSAGES CONTROL"]
disable = line-too-long,
          invalid-name,
          missing-module-docstring,
          missing-class-docstring,
          missing-function-docstring,
          too-many-arguments,
          too-many-statements,
          too-many-locals,
          wildcard-import,
          unused-argument,
          unused-wildcard-import,
          import-outside-toplevel,
          attribute-defined-outside-init,
          C0330, C0326,
          dangerous-default-value

